--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
 
-
-    <string name="app_name">StarterBoilerplate</string>
+    <string name="app_name">RNStarterBoilerplate</string>
 </resources>
